# AdGuardTest

./: .gitignore  CMakeLists.txt  LiteServer.cpp  LiteServer.h  README.md  SHA.h  WorkingWithQueue.h  cert.pem  client.sh  key.pem  main.cpp  Задание.txt
